--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ cat(
 
 ## Overview
 
-Companion package for the article *Kernel density estimation with polyspherical data and its applications* (García-Portugués and Meilán-Vila, 2024).
+Companion package for the article *Kernel density estimation with polyspherical data and its applications* (García-Portugués and Meilán-Vila, 2025).
 
 ## Replicability
 
@@ -41,6 +41,6 @@ The folder `/replication` contains the scripts to replicate the numerical experi
 
 ## References
 
-García-Portugués, E. and Meilán-Vila, A. (2024). Kernel density estimation with polyspherical data and its applications. *arXiv:2411.04166*. [doi:10.48550/arXiv.2411.04166](https://doi.org/10.48550/arXiv.2411.04166).
+García-Portugués, E. and Meilán-Vila, A. (2025). Kernel density estimation with polyspherical data and its applications. *Journal of the American Statistical Association*, to appear. [doi:10.1080/01621459.2025.2521898](https://doi.org/10.1080/01621459.2025.2521898).
 
 García-Portugués, E. and Meilán-Vila, A. (2023). Hippocampus shape analysis via skeletal models and kernel smoothing. In Larriba, Y. (Ed.), *Statistical Methods at the Forefront of Biomedical Advances*, pp. 63--82. Springer, Cham. [doi:10.1007/978-3-031-32729-2_4](https://doi.org/10.1007/978-3-031-32729-2_4).
